--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -84,8 +84,8 @@
             <th>尺寸</th>
             <th>销售数</th>
             <th>已拍数量</th>
+            <th>样品数量</th>
             <th width="150px">状态</th>
-            <th width="100px">备注</th>
             </thead>
             <tbody>
             {% for product in  targetproduct %}
@@ -100,28 +100,32 @@
                                     </td>
                                 {% endif %}
                                 <td>{{ sku.sku_name }}</td>
-                                <td>{{ sku.sale_num }}</td>
+                                <td><span id="sale_num_{{ sku.id }}">{{ sku.sale_num }}</span></td>
                                 <td><a href="/sale/dinghuo/statsbypid/{{ product.id }}" target="_blank"
-                                       style="display: block;">{{ sku.dinghuo_num }}</a></td>
-                                <td>
-                                    <span class="dinghuo_status" id="dinghuostatus_{{ sku.id }}"
-                                            {% if sku.flag_of_memo %} style="color: green;font-size: 20px"
-                                            {% elif sku.flag_of_less %} style="color: red;font-size: 20px"
-                                            {% elif sku.flag_of_more %}
-                                          style="color: blue;font-size: 20px"{% endif %}>{{ sku.dinghuo_status }}</span>
+                                       style="display: block;" id="ding_huo_num_{{ sku.id }}">{{ sku.dinghuo_num }}</a>
                                 </td>
                                 <td>
-                                    {% if sku.flag_of_less %}
-                                        {% if sku.flag_of_memo %}
-                                            <button class="btn btn-primary" type="button"
-                                                    id="changeMemo_{{ sku.id }}" onclick="changememo({{ sku.id }})">取消补全
-                                            </button>
-                                        {% else %}
-                                            <button class="btn btn-primary" type="button"
-                                                    id="changeMemo_{{ sku.id }}" onclick="changememo({{ sku.id }})">样品补全
-                                            </button>
-                                        {% endif %}
-                                    {% endif %}
+                                    <div class="row">
+                                        <div class="col-xs-8"><span id="memo_id_{{ sku.id }}">{{ sku.memo }}</span>
+                                        </div>
+                                        <div class="col-xs-4">
+                                            {% if sku.flag_of_less or sku.flag_of_more or sku.flag_of_memo %}
+                                                <a onclick="changememo({{ sku.id }},1)">
+                                                    <span class="glyphicon glyphicon-plus"></span></a><br>
+                                                <a onclick="changememo({{ sku.id }},0)">
+                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                </a>
+                                            {% endif %}
+                                        </div>
+
+
+                                    </div>
+                                </td>
+                                <td>
+                                    <span class="dinghuo_status" id="dinghuostatus_{{ sku.id }}"
+                                            {% if sku.flag_of_less %} style="color: red;font-size: 20px"
+                                            {% elif sku.flag_of_more %}
+                                          style="color: blue;font-size: 20px"{% endif %}>{{ sku.dinghuo_status }}</span>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -177,23 +181,29 @@
                 $(".floatview").css("position", "fixed");
             });
         });
-        function changememo(sku_id) {
+        function changememo(sku_id, flag) {
             var url = "/sale/dinghuo/changememo/";
-            var data = {"sku_id": sku_id};
-            var index = "changeMemo_" + sku_id;
             var indexstatus = "dinghuostatus_" + sku_id;
+            var index_of_memo = "memo_id_" + sku_id;
+            var index_of_ding_huo = "ding_huo_num_" + sku_id;
+            var index_of_sale = "sale_num_" + sku_id;
+            var str_of_memo = $("#" + index_of_memo);
             var dinghuostatus = $("#" + indexstatus);
-            var changeMemo = $("#" + index);
-            var dhstatusstr = dinghuostatus.html();
+            var ding_huo_num = $("#" + index_of_ding_huo);
+            var sale_num = $("#" + index_of_sale);
+            var data = {
+                "sku_id": sku_id,
+                "flag": flag,
+                "ding_huo_num": ding_huo_num.html(),
+                "sale_num": sale_num.html()
+            };
             var callback = function (res) {
-                if (res == "True") {
-                    dinghuostatus.html(dhstatusstr.replace("样品补", "缺少"));
-                    dinghuostatus.css("color", "red");
-                    changeMemo.html("样品补全");
-                } else if (res == "False") {
-                    dinghuostatus.html(dhstatusstr.replace("缺少", "样品补"));
-                    dinghuostatus.css("color", "green");
-                    changeMemo.html("取消补全");
+                var res_json = eval("(" + res + ")");
+                if (res_json.flag == "1") {
+                    str_of_memo.html(res_json.memo);
+                    dinghuostatus.html(res_json.result_str).css()
+                } else if (res_json.flag == "0") {
+                    str_of_memo.html(res_json.memo);
                 }
             };
             $.ajax({url: url, data: data, type: "post", success: callback});
