[xlmm][flashsale][trade] detail query

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -57,6 +57,9 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
+            <a href="/trades/detail/" class="addlink" target="_blank">
+                订单明细查询
+              </a>
               <a href="/trades/direct/?type=direct" class="addlink" target="_blank">
                 新内售单
               </a>
