--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -260,7 +260,8 @@
                 <div class="col-lg-2"><select name="status" class="form-control">
                     <option value="已处理">已处理</option>
                 </select></div>
-                <div class="col-lg-4"><input type="submit" class="btn btn-danger" value="保存"></div>
+                <div class="col-lg-2"><input type="submit" class="btn btn-danger" value="保存"></div>
+                <div class="col-lg-2"><a class="btn btn-info" target="_blank" href="/sale/dinghuo/auto_new_order/{{ orderlist.id }}/">自动生成订货表</a></div>
             </form>
         </div>
     {% else %}
@@ -363,7 +364,7 @@
                 <td width="100px"><input id="total_quantity_num" type="text" value="0" readonly/></td>
                 <td></td>
                 <td width="100px"><input id="total_amount_num" type="text" value="0" readonly/></td>
-                <td colspan="3"></td>
+                <td colspan="5"></td>
             </tr>
             </tfoot>
         </table>
