--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -94,6 +94,28 @@
             $.ajax({url: url, data: data, type: "post", success: callback});
 
         }
+
+        function change_inferior_num(order_detail_id,flag){
+            var index_of_inferior = "inferior_quantity_"+order_detail_id;
+            var inferior_num  = $("#"+index_of_inferior);
+            var num = parseInt(inferior_num.html());
+            var data = {
+                "order_detail_id":order_detail_id,
+                "flag":flag
+            }
+            var url = "/sale/dinghuo/change_inferior_num/";
+            var callback = function (res) {
+                if (res == "OK" && flag =="0") {
+                    inferior_num.html(num-1);
+                } else if (res == "OK" && flag =="1") {
+                     inferior_num.html(num+1);
+                }
+                else if (res == "false") {
+                    alert("加入失败")
+                }
+            };
+            $.ajax({url: url, data: data, type: "post", success: callback});
+        }
         function addtodinghuo(id) {
             var indexofskuid = "tb_sku_name_" + id
             var indexofbuyquantity = "tb_quantitys_" + id
@@ -256,7 +278,8 @@
                     <option value="已处理">已处理</option>
                 </select></div>
                 <div class="col-lg-2"><input type="submit" class="btn btn-danger" value="保存"></div>
-                <div class="col-lg-2"><a class="btn btn-info" target="_blank" href="/sale/dinghuo/auto_new_order/{{ orderlist.id }}/">自动生成订货表</a></div>
+                <div class="col-lg-2"><a class="btn btn-info" target="_blank"
+                                         href="/sale/dinghuo/auto_new_order/{{ orderlist.id }}/">自动生成订货表</a></div>
             </form>
         </div>
     {% else %}
@@ -335,7 +358,18 @@
                             </a>
                         {% endif %}
                     </td>
-                    <td><span id="inferior_quantity_{{ order.id }}">{{ order.inferior_quantity }}</span>
+                    <td>
+                        {% if not flagofstatus %}
+                            <a onclick="change_inferior_num({{ order.id }},1)">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </a>
+                        {% endif %}
+                        <span id="inferior_quantity_{{ order.id }}">{{ order.inferior_quantity }}</span>
+                        {% if not flagofstatus %}
+                            <a onclick="change_inferior_num({{ order.id }},0)">
+                                <span class="glyphicon glyphicon-minus"></span>
+                            </a>
+                        {% endif %}
                     </td>
                     <td width="90px">
                         <input type="number" class="form-control" min="0" value="0" name="arrived_num"
