[xlmm][flashsale][dinghuo] fix bug

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -102,8 +102,8 @@
                                 <td>{{ sku.sku_name }}</td>
                                 <td><span id="sale_num_{{ sku.id }}">{{ sku.sale_num }}</span></td>
                                 <td><a href="/sale/dinghuo/statsbypid/{{ product.id }}" target="_blank"
-                                       style="display: block;"
-                                       id="ding_huo_num_{{ sku.id }}">{{ sku.dinghuo_num }} ({{ sku.effect_quantity }})</a>
+
+                                       id="ding_huo_num_{{ sku.id }}">{{ sku.dinghuo_num }} </a>({{ sku.effect_quantity }})
                                 </td>
                                 <td>
                                     <div class="row">
