--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -75,7 +75,7 @@
                 };
                 $.ajax({url: url, data: data, type: "post", success: callback});
             } else {
-                alert("已经为零")
+                alert("已经为零");
             }
         }
         function changearrived(orderdetailid) {
@@ -97,26 +97,35 @@
 
         }
 
-        function change_inferior_num(order_detail_id,flag){
-            var index_of_inferior = "inferior_quantity_"+order_detail_id;
-            var inferior_num  = $("#"+index_of_inferior);
+        function change_inferior_num(order_detail_id, flag) {
+            var index_of_inferior = "inferior_quantity_" + order_detail_id;
+            var index_of_arrival = "arrival_quantity_" + order_detail_id;
+            var inferior_num = $("#" + index_of_inferior);
+            var arrival_num = $("#" + index_of_arrival);
             var num = parseInt(inferior_num.html());
+            var num_of_arrival = parseInt(arrival_num.html());
             var data = {
-                "order_detail_id":order_detail_id,
-                "flag":flag
+                "order_detail_id": order_detail_id,
+                "flag": flag
             }
             var url = "/sale/dinghuo/change_inferior_num/";
             var callback = function (res) {
-                if (res == "OK" && flag =="0") {
-                    inferior_num.html(num-1);
-                } else if (res == "OK" && flag =="1") {
-                     inferior_num.html(num+1);
+                if (res == "OK" && flag == "0") {
+                    inferior_num.html(num - 1);
+                    arrival_num.html(num_of_arrival + 1);
+                } else if (res == "OK" && flag == "1") {
+                    inferior_num.html(num + 1);
+                    arrival_num.html(num_of_arrival - 1);
                 }
                 else if (res == "false") {
                     alert("加入失败")
                 }
             };
-            $.ajax({url: url, data: data, type: "post", success: callback});
+            if ((flag == "0" && num == "0") || num_of_arrival == "0") {
+                alert("次品已经为零，或者库存为零");
+            } else {
+                $.ajax({url: url, data: data, type: "post", success: callback});
+            }
         }
         function addtodinghuo(id) {
             var indexofskuid = "tb_sku_name_" + id
