--- a/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
@@ -21,10 +21,14 @@
   <li role="presentation" class="active"><a href="#">申请成功</a></li>
 </ul>
 
-<form>
+<form action="{% url mama_confirm %}" method="POST">
+  {% csrf_token %}
+  <input type="hidden"  name="openid" value="{{ wxuser.openid }}">
+  <input type="hidden"  name="unionid" value="{{ wxuser.unionid }}">
+  
   <div class="well well-large">
-  <span>恭喜{{ name }}，您已成功申请小鹿妈妈，请添加管理员：，并通知管理员尽快审核您的信息。管理员审核通过后，您将正式成为小鹿妈妈代言人，获得订单佣金点击提成权限。</span>
+  <span>恭喜{{ xlmm.weikefu }}，您已成功申请小鹿妈妈，请添加管理员：，并通知管理员尽快审核您的信息。管理员审核通过后，您将正式成为小鹿妈妈代言人，获得订单佣金点击提成权限。</span>
   </div>
-  <button type="submit" class="btn btn-default">进入妈妈专属页面</button>
+  <button type="submit" class="btn btn-default">确认添加管理员微信号</button>
 </form>
 {% endblock %}
