--- a/shopmanager/flashsale/xiaolumm/templates/mama_deposit.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_deposit.html
@@ -15,29 +15,17 @@
 
 {% block container %}
 
+<div class="row">
 <ul class="nav nav-tabs">
-  <li role="presentation" ><a href="#">填写资料</a></li>
-  <li role="presentation" class="active"><a href="#">支付押金</a></li>
-  <li role="presentation"><a href="#">加入小鹿</a></li>
+  <li role="presentation" class="col-xs-4 "><a href="#">填写资料</a></li>
+  <li role="presentation" class="col-xs-4 active"><a href="#">支付押金</a></li>
+  <li role="presentation" class="col-xs-4"><a href="#">加入小鹿</a></li>
 </ul>
+</div>
 
-<form>
-  <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-    <button type="submit" class="btn btn-default">获取验证码</button>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-    <button type="submit" class="btn btn-default">验证手机</button>
-  </div>
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputAmount">使用昵称：</label>
-    <div class="input-group">
-      <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount">
-      <div class="input-group-addon">@小鹿美美</div>
-    </div>
-  </div>
+<form action="">
   
-  <button type="submit" class="btn btn-default">前往支付押金</button>
+  <a href="http://weixin.huyi.so/mm/p/2731/" class="btn btn-lg btn-primary">马上支付100元押金</a>
+  
 </form>
 {% endblock %}
