--- a/shopmanager/flashsale/xiaolumm/templates/mama_profile.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_profile.html
@@ -26,27 +26,29 @@
 </div>
 
 <div class="well well-lg">
-<form class="form-horizontal">
+<form class="form-horizontal" action="" method="POST">
 	{% csrf_token %}
-  <input type="hidden" id="id_openid" name="openid" value="{{ openid }}">
+  <input type="hidden" id="id_openid" name="openid" value="{{ wxuser.openid }}">
+  <input type="hidden" id="id_unionid" name="unionid" value="{{ wxuser.unionid }}">
   {% if not wxuser.isvalid %}
   <div class="form-group">
 	<div class="col-xs-8">
-	  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+	  <input type="text" id="id_mobile_input" class="form-control"  placeholder="请输入手机号">
 	</div>
-    <a href="#" class="col-xs-4 btn btn-default">获取验证码</a>
+    <a href="#" id="id_requestcode_button" class="col-xs-4 btn btn-default" onclick="requestcode();">获取验证码</a>
   </div>
   <div class="form-group">
+  	<p><span style="color:red" id="id_verify_msg"></span></p>
   	<div class="col-xs-8">
-      <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+      <input type="text" id="id_code_input" class="form-control" placeholder="请输入验证码">
     </div>
-    <a href="#" class="col-xs-2 btn btn-default">获取验证码</a>
+    <a href="#" id="id_verifycode_button" class="col-xs-4 btn btn-default" onclick="verifycode();">验证手机</a>
   </div>
   {% endif %}
   <div class="form-group">
   	<div class="col-xs-12 ">
     <div class="input-group ">
-      <input type="text" class="form-control" id="exampleInputAmount" placeholder="填写自己姓名">
+      <input type="text" class="form-control" name="nickname" placeholder="填写自己姓名">
       <div class="input-group-addon">@小鹿美美</div>
     </div>
     </div>
@@ -56,3 +58,112 @@
 </div>
 {% endblock %}
 
+{% block tail_script %}    
+    
+    <script type="text/javascript">
+      function validateMobile(s) {
+        var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
+        return validateReg.test(s);
+      };
+
+      function validateVerifyCode(s) {
+        var validateReg = /^\d{6}$/;
+        return validateReg.test(s);
+      };
+
+      var global_timer;
+      function updateTime() {
+        var btn = $("#id_requestcode_button");
+        time_left = parseInt(btn[0].innerHTML) - 1;
+        if (time_left <= 0) {
+          btn.attr("status","0");
+	  	  window.clearInterval(global_timer);
+          btn[0].innerHTML = "点击重发";
+	} else {
+          btn[0].innerHTML = time_left.toString();
+	}
+      };
+
+      function requestcode() {
+        var btn = $("#id_requestcode_button");
+        var status = btn.attr("status");
+        if (status == "1" || status == "2") {
+          return;
+        }
+
+        var mobile = $("#id_mobile_input").val();
+        if (validateMobile(mobile) == false) {
+          return;
+        }
+
+        btn.attr("status","1");
+	btn[0].innerHTML = "180";
+        global_timer = window.setInterval(updateTime, 1000);
+
+	var openid = $("#id_openid").val();
+        var url = "/weixin/requestcode/";
+	var data = {"mobile":mobile, "openid":openid};
+
+        var callback = function (res) {
+	  if (res["code"] == "wait") {
+            $("#id_verify_msg")[0].innerHTML = "请先耐心等待60秒哦！";
+            return;
+          } 
+
+          if (res["code"] != "good") {
+	    btn.attr("status","0");
+	    window.clearInterval(global_timer);
+          }
+
+	  if (res["code"] == "locked") {
+            $("#id_verify_msg")[0].innerHTML = "验证次数达到上限，请联系微信客服处理！";
+            btn[0].innerHTML = "已达上限";
+            return;
+          } 
+	  if (res["code"] == "anony") {
+            $("#id_verify_msg")[0].innerHTML = "请从优尼世界微信登录此页面！";
+            btn[0].innerHTML = "登录有误";
+            return;
+          } 
+	  if (res["code"] == "bad") {
+            $("#id_verify_msg")[0].innerHTML = "请输入正确的手机号码！";
+            btn[0].innerHTML = "点击重发";
+            return;
+          } 
+	  if (res["code"] == "dup") {
+            $("#id_verify_msg")[0].innerHTML = "此号码已被他人验证，请重新输入！";
+            btn[0].innerHTML = "点击重发";
+            return;
+          } 
+        };
+        
+        $.ajax({url:url, data:data, success:callback});
+      };
+
+      function verifycode() {
+        var verifycode = $("#id_code_input").val();
+        if (validateVerifyCode(verifycode) == false) {
+          $("#id_verify_msg")[0].innerHTML = "验证码错误！";
+          return;
+        }
+        var url = "/weixin/verifycode/";
+        var callback = function (res) {
+          if (res["code"] == "bad") {
+            $("#id_verifycode_button")[0].innerHTML = "验证失败，刷新再试";
+            return;
+          }
+
+	  window.clearInterval(global_timer);
+          $("#id_verifycode_group").css("display","none");
+          $("#id_requestcode_button").removeClass("btn-primary").addClass("btn-success")[0].innerHTML="已验证";
+          $("#id_mobile_input").attr("disabled","disabled");
+          $("#id_requestcode_button").attr("status", "2");
+        };
+        var openid = $("#id_openid").val();
+	var data = {"verifycode":verifycode, "openid":openid};
+        $.ajax({url:url, data:data, success:callback});
+      };
+
+      
+    </script>
+{% endblock %}
