[xlmm][flashsale][dinghuo] add href in daily work

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -95,7 +95,7 @@
                             <tr>
                                 {% if forloop.first %}
                                     <td rowspan="{{ sku_len }}">{{ product.name }}<br>
-                                        <a href="/admin/items/product/?q={{ product.outer_id }}" target="_blank">编码:{{ product.outer_id }}</a>
+                                        <a href="/sale/dinghuo/adddetail/{{ product.outer_id }}" target="_blank">编码:{{ product.outer_id }}</a>
                                     </td>
                                     <td rowspan="{{ sku_len }}"><img src="{{ product.pic_path }}" width="100px"
                                                                      class="img-circle">
