--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -52,7 +52,7 @@
     <li class="list-group-item"><span style="color:orange">订单金额： ￥{{ total_value }}</span></li>
     {% if xlmm.agencylevel > 1 %}
     {% if carry > 0 %}
-    <li class="list-group-item"><span style="color:orange">订单补贴： ￥{{ carry }}（待确认）</span></li>
+    <li class="list-group-item"><span style="color:orange">订单补贴： ￥{{ carry }}{% if not carry_confirm %}（待确认）{% endif %}</span></li>
     {% else %}
     <li class="list-group-item"><span style="color:orange">订单补贴： {{ carry }}</span></li>
     {% endif %}
