fix flashsale click and pay and add get_Unionid

--- a/shopmanager/flashsale/pay/templates/pay/morderdetail.html
+++ b/shopmanager/flashsale/pay/templates/pay/morderdetail.html
@@ -162,7 +162,7 @@
 	</div>
 	<div class="row list-row list-row-border">
 		<div class="col-xs-3 padding-lf0">付款时间：</div>
-		<div class="col-xs-9 padding-lf5">{{ created }}</div>
+		<div class="col-xs-9 padding-lf5">{{ pay_time }}</div>
 	</div>
   </div>
 </div>
