--- a/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
@@ -9,26 +9,46 @@
     tfoot input{
         width:50%;
     }
+    .container p{
+    	font-size:16px;
+    }
+    .wrapper{ text-aligin:center;height:50px;}
+    .flow-steps{ position:relative; padding:0px; list-style:none; font-size:14px; overflow:hidden;}
+	.flow-steps li{ float:left; padding:10px;}
+	.flow-steps a {padding:5px;width:100%;}
+	.flow-steps .on a{ background:#ff6600; color:#fff;}
+	.flow-steps .on a:after{ border-left-color:#ff6600;}
+	.flow-steps li.on:first-child a:before{ border-color:#ff6600;}
 </style>
 {% endblock %}
 
 
 {% block container %}
 
-<ul class="nav nav-tabs">
-  <li role="presentation" ><a href="#">填写资料</a></li>
-  <li role="presentation" ><a href="#">支付押金</a></li>
-  <li role="presentation" class="active"><a href="#">申请成功</a></li>
-</ul>
+<div class="wrapper">
+    <ul class="flow-steps">
+    	<li class="col-xs-4 "><a href="#" class="btn btn-default">填写资料 &gt;</a></li>
+        <li class="col-xs-4 "><a href="#" class="btn btn-default">支付押金 &gt;</a></li>
+        <li class="col-xs-4 on"><a href="#" class="btn">加入小鹿 &gt;</a></li>
+    </ul>
+    <div class="arr"></div>
+</div>
 
-<form action="{% url mama_confirm %}" method="POST">
-  {% csrf_token %}
-  <input type="hidden"  name="openid" value="{{ wxuser.openid }}">
-  <input type="hidden"  name="unionid" value="{{ wxuser.unionid }}">
-  
-  <div class="well well-large">
-  <span>恭喜{{ xlmm.weikefu }}，您已成功申请小鹿妈妈，请添加管理员：，并通知管理员尽快审核您的信息。管理员审核通过后，您将正式成为小鹿妈妈代言人，获得订单佣金点击提成权限。</span>
+<div class="jumbotron" style="padding:5px;">
+  <div class="container">
+    <p>恭喜{{ xlmm.weikefu }}，您离成为正式小鹿妈妈就差一步了，请扫描二维码加客服(<span class="text-warning">并提醒设置正式妈妈权限哦</span>)：</p>
+    <a href="#" class="thumbnail">
+      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsqU4IdVkksEq4TMicYHR5yYUGsp4Duj56nDSicBNDsNXdwxbV7JJh8KhsCibgDHmHweQ34hKhDw2SHw/0?wx_fmt=jpeg" alt="...">
+    </a>
+
+    <form action="{% url mama_confirm %}" method="POST">
+	  {% csrf_token %}
+	  <input type="hidden"  name="openid" value="{{ wxuser.openid }}">
+	  <input type="hidden"  name="unionid" value="{{ wxuser.unionid }}">
+	  
+	  <button type="submit" class="btn btn-primary btn-lg">确认已添加管理员微信号</button>
+	</form>
   </div>
-  <button type="submit" class="btn btn-default">确认添加管理员微信号</button>
-</form>
+</div>
+
 {% endblock %}
